--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@nloui/paperless-mcp",
   "version": "1.0.0",
   "description": "Model Context Protocol (MCP) server for interacting with Paperless-NGX document management system. Enables AI assistants to manage documents, tags, correspondents, and document types through the Paperless-NGX API.",
-  "main": "src/index.js",
+  "main": "build/index.js",
   "bin": {
-    "paperless-mcp": "src/index.js"
+    "paperless-mcp": "build/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
