--- a/package.json
+++ b/package.json
@@ -1,17 +1,7 @@
 {
-  "name": "@nloui/paperless-mcp",
+  "name": "@kjanat/paperless-mcp",
   "version": "1.0.0",
   "description": "Model Context Protocol (MCP) server for interacting with Paperless-NGX document management system. Enables AI assistants to manage documents, tags, correspondents, and document types through the Paperless-NGX API.",
-  "main": "build/index.js",
-  "bin": {
-    "paperless-mcp": "build/index.js"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts",
-    "build": "tsc",
-    "inspect": "npm run build && npx -y @modelcontextprotocol/inspector node build/index.js"
-  },
   "keywords": [
     "mcp",
     "paperless-ngx",
@@ -21,11 +11,20 @@
     "model-context-protocol",
     "paperless"
   ],
-  "author": "Nick Loui",
-  "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nloui/paperless-mcp.git"
+    "url": "git+https://github.com/kjanat/paperless-mcp.git"
+  },
+  "license": "ISC",
+  "author": "Kaj Kowalski",
+  "main": "src/index.ts",
+  "bin": {
+    "paperless-mcp": "dist/index.js"
+  },
+  "scripts": {
+    "build": "bun build src/index.ts",
+    "inspect": "bunx @modelcontextprotocol/inspector bun src/index.ts",
+    "start": "bun src/index.ts"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.1",
@@ -34,7 +33,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22.15.17",
-    "ts-node": "^10.9.2"
-  }
+    "@types/bun": "^1.3"
+  },
+  "packageManager": "bun@1.3.9"
 }
