--- a/package.json
+++ b/package.json
@@ -31,16 +31,18 @@
     "fmt:check": "dprint check .",
     "inspect": "bunx @modelcontextprotocol/inspector bun src/index.ts",
     "prepack": "bun bd",
-    "start": "bun src/index.ts"
+    "start": "bun src/index.ts",
+    "typecheck": "tsgo --noEmit"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.11.1",
-    "express": "^5.1.0",
-    "typescript": "^5.8.3",
-    "zod": "^3.24.1"
+    "@modelcontextprotocol/sdk": "^1.26.0",
+    "express": "^5.2.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@types/bun": "^1.3"
+    "@types/bun": "^1.3.9",
+    "@typescript/native-preview": "^7.0.0-dev.20260220.1",
+    "typescript": "^5.9.3"
   },
   "packageManager": "bun@1.3.9"
 }
