--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "typecheck": "tsgo --noEmit"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.26.0",
-    "express": "^5.2.1",
-    "zod": "^4.3.6"
+    "@modelcontextprotocol/sdk": "^1.26.0"
   },
   "devDependencies": {
     "@types/bun": "^1.3.9",
