--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "typecheck": "tsgo --noEmit"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.26.0"
+    "@modelcontextprotocol/sdk": "^1.26.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/bun": "^1.3.9",
     "@typescript/native-preview": "^7.0.0-dev.20260220.1",
+    "express": "^5.2.1",
     "typescript": "^5.9.3"
   },
   "packageManager": "bun@1.3.9"
