--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
   "devDependencies": {
     "@types/bun": "^1.3.9",
     "@typescript/native-preview": "^7.0.0-dev.20260220.1",
-    "express": "^5.2.1",
     "typescript": "^5.9.3"
+  },
+  "optionalDependencies": {
+    "express": "^5.2.1"
   },
   "packageManager": "bun@1.3.9"
 }
