--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kjanat/paperless-mcp",
-  "version": "1.0.0",
+  "version": "1.0.1-dev.0",
   "description": "Model Context Protocol (MCP) server for interacting with Paperless-NGX document management system. Enables AI assistants to manage documents, tags, correspondents, and document types through the Paperless-NGX API.",
   "keywords": [
     "mcp",
