--- a/package.json
+++ b/package.json
@@ -46,5 +46,9 @@
   "optionalDependencies": {
     "express": "^5.2.1"
   },
-  "packageManager": "bun@1.3.9"
+  "packageManager": "bun@1.3.9",
+  "publishConfig": {
+    "access": "public",
+    "tag": "dev"
+  }
 }
