--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,30 +1,28 @@
 ---
 name: Publish to npm
-on: { release: { types: [created] } }
+on: { release: { types: [created] }, workflow_dispatch: {} }
 
 jobs:
   test:
     runs-on: ubuntu-latest
     permissions: read-all
     steps:
-      - uses: actions/checkout@v6
-      - uses: actions/setup-node@v6
-        with: { node-version: lts/* }
-      - uses: oven-sh/setup-bun@v2
+      - { uses: actions/checkout@v6 }
+      - { uses: actions/setup-node@v6, with: { node-version: lts/* } }
+      - { uses: oven-sh/setup-bun@v2 }
       - run: bun i
       - run: bun test
 
   publish-npm:
     needs: test
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
+    permissions: { contents: read, id-token: write }
+    environment:
+      name: npm
+      url: https://www.npmjs.com/package/@kjanat/paperless-mcp
     steps:
-      - uses: actions/checkout@v6
-      - uses: actions/setup-node@v6
-        with: { node-version: lts/*, registry-url: https://registry.npmjs.org/ }
-      - uses: oven-sh/setup-bun@v2
+      - { uses: actions/checkout@v6 }
+      - { uses: actions/setup-node@v6, with: { node-version: lts/*, registry-url: https://registry.npmjs.org/ } }
+      - { uses: oven-sh/setup-bun@v2 }
       - run: bun i && npm i -g npm@latest
-      - run: npm publish --provenance
-        env: { NODE_AUTH_TOKEN: "${{ secrets.NPM_TOKEN }}" }
+      - run: npm publish --provenance --tag latest
