--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kjanat/paperless-mcp",
-  "version": "1.0.1-dev.2",
+  "version": "2.0.0",
   "description": "MCP server for interacting with Paperless-ngx document management system.",
   "keywords": [
     "mcp",
