remove main entry from package.json; bin-only pkg, stops leaking src/index.ts into tarball

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "license": "MIT",
   "author": "Kaj Kowalski",
-  "main": "src/index.ts",
+  "type": "module",
   "bin": {
     "paperless-mcp": "dist/index.js"
   },
