--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "2.0.1",
   "description": "MCP server for interacting with Paperless-ngx document management system.",
   "keywords": [
-    "mcp",
     "paperless-ngx",
-    "document-management",
+    "paperless",
     "ai",
-    "claude",
+    "mcp",
     "model-context-protocol",
-    "paperless"
+    "document-management"
   ],
   "repository": {
     "type": "git",
@@ -34,18 +33,14 @@
     "start": "bun src/index.ts",
     "typecheck": "tsgo --noEmit"
   },
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.26.0",
-    "zod": "^4.3.6"
-  },
   "devDependencies": {
+    "@modelcontextprotocol/sdk": "^1.26.0",
     "@types/bun": "^1.3.9",
     "@typescript/native-preview": "^7.0.0-dev.20260221.1",
     "dprint": "^0.51.1",
-    "typescript": "^5.9.3"
-  },
-  "optionalDependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "typescript": "^5.9.3",
+    "zod": "^4.3.6"
   },
   "packageManager": "bun@1.3.9",
   "publishConfig": {
