--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,24 @@
 {
 	"compilerOptions": {
-		/* Language and Environment */
+		// Language and Environment
 		"target": "esnext",
 		"lib": [
 			"ESNext"
 		],
 		"allowJs": true,
-		/* Modules */
+
+		// Modules
 		"module": "esnext",
 		"moduleResolution": "bundler",
 		"noEmit": true,
 		"resolveJsonModule": true,
-		/* Interop Constraints */
+
+		// Interop Constraints
 		"isolatedModules": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-		/* Type Checking */
+
+		// Type Checking
 		"strict": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
@@ -24,8 +27,14 @@
 		"noUncheckedIndexedAccess": true,
 		"noImplicitOverride": true,
 		"noPropertyAccessFromIndexSignature": true,
-		/* Completeness */
-		"skipLibCheck": true
+
+		// Completeness
+		"skipLibCheck": true,
+
+		// Aliases
+		"paths": {
+			"$/*": ["./*"]
+		}
 	},
 	"exclude": ["dist"]
 }
