--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.26.0",
     "@types/bun": "^1.3.9",
+    "@types/express": "^5.0.6",
     "@typescript/native-preview": "^7.0.0-dev.20260221.1",
     "dprint": "^0.51.1",
     "express": "^5.2.1",
@@ -43,6 +44,9 @@
     "zod": "^4.3.6"
   },
   "packageManager": "bun@1.3.9",
+  "engines": {
+    "node": ">=22"
+  },
   "publishConfig": {
     "access": "public",
     "tag": "dev"
